feat: added iconset support and managing endpoints
