# src/main/java/org/tkit/onecx/theme/domain/services/IconService.java
@@ -6,9 +6,12 @@ import java.util.List;
 
 import jakarta.enterprise.context.ApplicationScoped;
 import jakarta.inject.Inject;
+import jakarta.transaction.Transactional;
 
 import org.tkit.onecx.theme.domain.daos.IconDAO;
+import org.tkit.onecx.theme.domain.daos.IconSetDAO;
 import org.tkit.onecx.theme.domain.models.Icon;
+import org.tkit.onecx.theme.domain.models.IconSet;
 
 import com.fasterxml.jackson.databind.ObjectMapper;
 
@@ -21,6 +24,9 @@ public class IconService {
     @Inject
     IconDAO iconDAO;
 
+    @Inject
+    IconSetDAO iconSetDAO;
+
     public void createIcons(byte[] iconSetData, String refId) throws IOException {
 
         ObjectMapper mapper = new ObjectMapper();
@@ -29,6 +35,14 @@ public class IconService {
         var aliases = jsonData.get("aliases");
         var icons = jsonData.get("icons");
         var iconListToCreate = new ArrayList<Icon>();
+
+        var iconSet = new IconSet();
+        iconSet.setName(jsonData.get("info").path("name").asText());
+        iconSet.setPrefix(prefix);
+        iconSet.setVersion(jsonData.get("info").path("version").asText());
+        iconSet.setRefId(refId);
+        iconSet.setIconCount(jsonData.get("info").path("total").asInt());
+
         icons.forEachEntry((iconName, jsonNode) -> {
             Icon iconToCreate = new Icon();
             iconToCreate.setName(prefix + ":" + iconName);
@@ -45,7 +59,9 @@ public class IconService {
             iconToCreate.setParent(prefix + ":" + jsonNode.get("parent").asText());
             iconListToCreate.add(iconToCreate);
         });
-        iconDAO.create(iconListToCreate);
+
+        iconSet.setIcons(iconListToCreate);
+        iconSetDAO.create(iconSet);
     }
 
     public List<Icon> resolveAliases(List<Icon> icons) {
@@ -77,5 +93,11 @@ public class IconService {
             return resolveParentRecursively(parent.getParent(), refId);
         }
         return parent;
+    }
+
+    @Transactional(Transactional.TxType.REQUIRED)
+    public void deleteIconSetByRefIdAndPrefix(String refId, String prefix) {
+        var iconSet = iconSetDAO.findByPrefixAndRefId(prefix, refId);
+        iconSetDAO.delete(iconSet);
     }
 }
